--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3>live in sydney</h3>
             <div class="even-date">
              <i class="fa fa-calendar"></i>
-             <h5>wednesday 28 december 2022</h5>
+             <span>wednesday 28 december 2022</span>
                <span>08:55pm to 12:00 am</span>
             </div>
             <div class="even-info">
