--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="row mt-3">
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Gryffindor
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -274,7 +274,7 @@
           <p><i class="fa fa-home me-3"></i> 21st Jump Street</p>
           <p>
             <i class="fa fa-envelope me-3"></i>
-            info@example.com
+            NITW@gmail.com
           </p>
           <p><i class="fa fa-phone me-3"></i> + 01 234 567 88</p>
           <p><i class="fa fa-print me-3"></i> + 01 234 567 89</p>
